[package]
name = "axl"
version = "0.1.0"
authors = ["Andrei <eu@andreih.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket = "0.5.0-rc.1"
futures = "0.3.15"
reqwest = "0.11"
scraper = "0.12.0"
csv = "1.1.6"
chrono = { version = "0.4.19", features= ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel/" }
dotenv = "0.15.0"